# SmartElbowExo

./: .gitignore  README.md
Arduino/: finalServo.ino.ino
src/control_vr_package/: CMakeLists.txt  package.xml
src/control_vr_package/launch/: launch.py
src/control_vr_package/scripts/: plot_python.py  trajectory_planner.py
src/control_vr_package/src/: control_node.cpp  virtual_robot_1000.cpp  virtual_robot_node.cpp
src/serial_comm/: package.xml  setup.py
src/serial_comm/launch/: launch.py  trajectory_planner_.py  vr_timer.cpp
src/serial_comm/serial_comm/scripts/: pcarduino.py  pcarduino_ros.py  pcarduino_ros_touch.py  pcarduino_step.py  pcarduino_to_traj.py  serial_communication_node.py  trajectory_1.py
src/serial_comm/srv/: TrajectoryCommand.srv
src/serial_communication_package/: CMakeLists.txt  package.xml  setup.py
src/serial_communication_package/launch/: launch.py
src/serial_communication_package/scripts/: serial_python_node.py
src/serial_communication_package/src/: serial_communication_node.cpp
src/test_package/: CMakeLists.txt  package.xml
src/test_package/launch/: launch.py
src/test_package/src/: test_torque_publisher.cpp
src/turtle_msgs/: CMakeLists.txt  package.xml
src/turtle_msgs/msg/: ExoState.msg
src/turtle_msgs/srv/: SetDesiredPose.srv
