<package format="3">
  <name>serial_comm</name>
  <version>0.0.1</version>
  <description>Package for controlling a servo via ROS2 and Arduino</description>

  <maintainer email="fannyti@chalmers.se">Fanny</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
